[package]
name = "lcd_mine"
version = "0.1.0"
authors = ["martin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtic = "0.5.6"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
rtic-core = "0.3.1"
hd44780-driver = "0.4.0"

[[bin]]
name = "lcd_mine"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[dependencies.stm32f1]
version = "0.11.0"
features = ["stm32f103","rt"]

[dependencies.stm32f1xx-hal]
features = ["stm32f103","rt","medium"]
version = "0.6.1"